# xtract

./: .gitignore  Cargo.toml  LICENSE  build.rs  build_debug.sh  build_hot_reload.bat  build_hot_reload.sh  build_release.bat  build_release.sh
game/: assets.odin  camera.odin  draw.odin  game.odin  item.odin  toolbar.odin  ui.odin  update.odin
notes/: 26-11-2024.md
src/: grid.rs  main.rs
