[package]
name = "xtract"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[profile.release]
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0
incremental = true

[dependencies]
raylib = { version = "5.5.1", features = [] }

[build-dependencies]
static_vcruntime = "2.0.0"

# dev-dependencies
# [profile.dev.package."*"]
# opt-level = 3
